bootstrap/argo-cd/argocd-dex-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      containers:
        - name: dex
          # command: [argocd-server, --staticassets, /shared/app, --insecure]
