bootstrap/argo-cd/argocd-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        # command: [argocd-server, --staticassets, /shared/app, --insecure]
        command: [--insecure]
